force-app/main/default/objects/cgcloud__Tour__c/cgcloud__Tour__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the tour object.</description>
    <label>Tour</label>
    <nameField>
        <label>Tour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>