force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Assignment_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Assignment_Confirmation__c</fullName>
    <description>Specifies the tour assignment confirmation type for the user. This field is reserved for future use.</description>
    <inlineHelpText>This field is reserved for future use.</inlineHelpText>
    <label>Assignment Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NoConfirmationRequired</fullName>
                <label>No Confirmation Required</label>
            </value>
            <value>
                <fullName>PendingConfirmation</fullName>
                <label>Pending Confirmation</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>