force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Cancel_Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cancel_Note__c</fullName>
    <label>Cancel Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>