force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RouteClosed</fullName>
            </value>
            <value>
                <fullName>VehicleProblems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>