force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Cash_Handling_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cash_Handling_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Handling Required</label>
    <type>Checkbox</type>
</CustomField>