force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__CoDriver__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__CoDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The co-driver for the tour.</description>
    <label>Co-Driver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CoDrivers</relationshipName>
    <type>Lookup</type>
</CustomField>