force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Completion_Release_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Completion_Release_Time__c</fullName>
    <label>Completion Release Time</label>
    <type>DateTime</type>
</CustomField>