force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Consider_Mileage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Mileage__c</fullName>
    <label>Consider Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>