force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Consider_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Vehicle__c</fullName>
    <label>Consider Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>TruckTrailer</fullName>
            </value>
            <value>
                <fullName>TruckTrailers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>