force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Consider_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Vehicle_Status__c</fullName>
    <label>Consider Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>StatusReason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>