force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Default_Driver__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Driver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tours</relationshipName>
    <type>Lookup</type>
</CustomField>