force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Default_Tour_Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Tour_Visit_Duration__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The duration for creating tour related visits based on the sequence. It’s measured in minutes.</description>
    <inlineHelpText>The duration for creating tour related visits based on the sequence. It’s measured in minutes.</inlineHelpText>
    <label>Default Tour Visit Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>