force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>