force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__End_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Warehouse</label>
    <referenceTo>cgcloud__Warehouse__c</referenceTo>
    <relationshipLabel>Tours (End Warehouse)</relationshipLabel>
    <relationshipName>Tours1</relationshipName>
    <type>Lookup</type>
</CustomField>