force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Express_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Express_Check_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Express Check Out</label>
    <type>Checkbox</type>
</CustomField>