force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Has_End_Tour_Veh_Details_Rvw__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Has_End_Tour_Veh_Details_Rvw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the vehicle details are reviewed during the end tour activities (true) or not (false).</description>
    <label>End Tour Vehicle Details Reviewed</label>
    <type>Checkbox</type>
</CustomField>