force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Message__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>