force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Multiple_Cash_Check_In_Allowed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Multiple_Cash_Check_In_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Cash Check-In Allowed</label>
    <type>Checkbox</type>
</CustomField>