force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Odometer_End__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Odometer_End__c</fullName>
    <label>Odometer End</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>