force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Route__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>cgcloud__Route__c</referenceTo>
    <relationshipLabel>Tours</relationshipLabel>
    <relationshipName>Tours</relationshipName>
    <type>Lookup</type>
</CustomField>