force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Should_Allow_End_Day_Time_Tracking__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Allow_End_Day_Time_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether end of the day time tracking is allowed or not.</description>
    <label>Allow End Day Time Tracking</label>
    <type>Checkbox</type>
</CustomField>