force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Should_Allow_Start_Day_GPS_Tracking__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Allow_Start_Day_GPS_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether GPS tracking is allowed at the start of the day.</description>
    <label>Allow Start Day GPS Tracking</label>
    <type>Checkbox</type>
</CustomField>