force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Start_Release_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Release_Time__c</fullName>
    <label>Start Release Time</label>
    <type>DateTime</type>
</CustomField>