force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Start_Tour_Activities_Completed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Tour_Activities_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if activities for the start of the tour are completed or not.</description>
    <label>Start Tour Activities Completed</label>
    <type>Checkbox</type>
</CustomField>