force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Start_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Start Warehouse</label>
    <referenceTo>cgcloud__Warehouse__c</referenceTo>
    <relationshipLabel>Tours</relationshipLabel>
    <relationshipName>Tours</relationshipName>
    <type>Lookup</type>
</CustomField>