force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Trailer_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trailer_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select vehicles of the type Trailer.</inlineHelpText>
    <label>Trailer 1</label>
    <referenceTo>cgcloud__Vehicle__c</referenceTo>
    <relationshipLabel>Tours (Trailer 1)</relationshipLabel>
    <relationshipName>Tours1</relationshipName>
    <type>Lookup</type>
</CustomField>