force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Truck__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Truck__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select vehicles of the type Truck Fast or Truck Slow.</inlineHelpText>
    <label>Truck</label>
    <referenceTo>cgcloud__Vehicle__c</referenceTo>
    <relationshipLabel>Tours</relationshipLabel>
    <relationshipName>Tours</relationshipName>
    <type>Lookup</type>
</CustomField>