force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Truck_ok_Start__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Truck_ok_Start__c</fullName>
    <label>Truck ok Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>