force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Truck_Status_Start__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Truck_Status_Start__c</fullName>
    <label>Truck Status Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tires</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Wash</fullName>
            </value>
            <value>
                <fullName>Mirror</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>