force-app/main/default/objects/cgcloud__Tour__c/fields/cgcloud__Vehicle_Details_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vehicle_Details_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the vehicle details are reviewed.</description>
    <label>Vehicle Details Reviewed</label>
    <type>Checkbox</type>
</CustomField>