force-app/main/default/objects/cgcloud__Tour__c/recordTypes/cgcloud__Tour_Editable.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Tour_Editable</fullName>
    <active>true</active>
    <label>Tour Editable</label>
</RecordType>