force-app/main/default/objects/cgcloud__Tour__c/recordTypes/cgcloud__Tour_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Tour_Read_Only</fullName>
    <active>true</active>
    <label>Tour Read Only</label>
</RecordType>