force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Check_If_End_Date_Is_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_End_Date_Is_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(cgcloud__End_Date_Time__c) || ISNULL(cgcloud__End_Date_Time__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__End_Date_Time__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>