force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Check_If_Route_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Route_Is_Changed</fullName>
    <active>true</active>
    <description>You can&apos;t edit the route after creating the tour.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PRIORVALUE(cgcloud__Route__c))), 
    ISCHANGED(cgcloud__Route__c)
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit the route after creating the tour.</errorMessage>
</ValidationRule>