force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Check_If_Sales_Org_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Sales_Org_Is_Changed</fullName>
    <active>true</active>
    <description>You can&apos;t edit the sales org after creating the tour.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>You can&apos;t edit the sales org after creating the tour.</errorMessage>
</ValidationRule>