force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Restrict_Tour_Edit_Post_Cancelation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Restrict_Tour_Edit_Post_Cancelation</fullName>
    <active>false</active>
    <description>Restricts editing of tour after tour cancellation</description>
    <errorConditionFormula>AND
(
	NOT( ISNEW()),
    ISPICKVAL(PRIORVALUE(cgcloud__Status__c), &quot;Canceled&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit a canceled tour.</errorMessage>
</ValidationRule>