force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Restrict_Tour_Edit_Post_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Restrict_Tour_Edit_Post_Completion</fullName>
    <active>false</active>
    <description>Restricts editing of tour after tour completion</description>
    <errorConditionFormula>AND
(
	NOT( ISNEW()),
    ISPICKVAL(PRIORVALUE(cgcloud__Status__c), &quot;Completed&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit a completed tour.</errorMessage>
</ValidationRule>