force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Start_Date_Time_End_Date_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Start_Date_Time_End_Date_Time_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(cgcloud__Start_Date_Time__c )  &gt; DATEVALUE( cgcloud__End_Date_Time__c)</errorConditionFormula>
    <errorMessage>Start Date Time can&apos;t be later than End Date Time.</errorMessage>
</ValidationRule>