force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Start_Warehouse_Validation1.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Start_Warehouse_Validation1</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(cgcloud__Start_Warehouse__c)</errorConditionFormula>
    <errorMessage>Enter a value for the Start Warehouse field.</errorMessage>
</ValidationRule>