force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Status_Cancel_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Status_Cancel_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(cgcloud__Status__c , &apos;Canceled&apos;) &amp;&amp; ISBLANK(TEXT( cgcloud__Cancel_Reason__c))</errorConditionFormula>
    <errorMessage>Enter a reason for Cancelation.</errorMessage>
</ValidationRule>