force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Tour_Fields_Validations1.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Tour_Fields_Validations1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
          OR(
          ISPICKVAL( cgcloud__Status__c ,&apos;Running&apos;),
          ISPICKVAL( cgcloud__Status__c ,&apos;Completed&apos;)
          ),
          AND(
          ISPICKVAL( cgcloud__Consider_Vehicle__c ,&apos;Truck&apos;),
          ISBLANK( cgcloud__Truck__c )
          )
          )</errorConditionFormula>
    <errorMessage>The Truck can&apos;t be empty.</errorMessage>
</ValidationRule>