force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Tour_Fields_Validations2.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Tour_Fields_Validations2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
          OR(
          ISPICKVAL( cgcloud__Status__c ,&apos;Running&apos;),
          ISPICKVAL( cgcloud__Status__c ,&apos;Completed&apos;)
          ),
          AND(
          ISPICKVAL(cgcloud__Consider_Vehicle__c,&apos;TruckTrailer&apos;),
          OR(
          ISBLANK( cgcloud__Truck__c ),
          ISBLANK(  cgcloud__Trailer_1__c )
          )
          )
          )</errorConditionFormula>
    <errorMessage>The Truck and the Trailer 1 can&apos;t be empty.</errorMessage>
</ValidationRule>