force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Tour_Fields_Validations3.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Tour_Fields_Validations3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
          OR(
          ISPICKVAL( cgcloud__Status__c ,&apos;Running&apos;),
          ISPICKVAL( cgcloud__Status__c ,&apos;Completed&apos;)
          ),
          AND(
          ISPICKVAL(cgcloud__Consider_Vehicle__c,&apos;TruckTrailers&apos;),
          OR(
          ISBLANK(cgcloud__Truck__c),
          ISBLANK(cgcloud__Trailer_1__c),
          ISBLANK(cgcloud__Trailer_2__c)
          )
          )
          )</errorConditionFormula>
    <errorMessage>The Truck, the Trailer 1 and the Trailer 2 can&apos;t be empty.</errorMessage>
</ValidationRule>