force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Tour_Template_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Tour_Template_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( cgcloud__Tour_Template__c )</errorConditionFormula>
    <errorDisplayField>cgcloud__Tour_Template__c</errorDisplayField>
    <errorMessage>The Tour Template can&apos;t be empty.</errorMessage>
</ValidationRule>