force-app/main/default/objects/cgcloud__Tour__c/validationRules/cgcloud__Truck_Field_Vehicle_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Truck_Field_Vehicle_Type_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(cgcloud__Truck__c)),
NOT(
ISPICKVAL(cgcloud__Truck__r.cgcloud__Vehicle_Type__c , &apos;TruckSlow&apos;)) ,
NOT(
ISPICKVAL(cgcloud__Truck__r.cgcloud__Vehicle_Type__c , &apos;TruckFast&apos;))
)</errorConditionFormula>
    <errorMessage>Only vehicles with &apos;Truck Fast&apos; or &apos;Track Slow&apos; can be selected in Truck.</errorMessage>
</ValidationRule>