force-app/main/default/objects/cgcloud__Tour__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Tour_Template__c</columns>
    <columns>cgcloud__Default_Driver__c</columns>
    <columns>cgcloud__Start_Date_Time__c</columns>
    <columns>cgcloud__Status__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>